fix: aggiunta scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-::-webkit-scrollbar {
-  width: 20px;
-}
-
 header a {
   text-decoration: none;
 }
